@@ -1,23 +1,0 @@
-
-from Products.Archetypes.public import process_types, listTypes
-from Products.CMFCore import utils
-from Products.CMFCore.DirectoryView import registerDirectory
-
-from config import *
-
-#registerDirectory(SKINS_DIR, GLOBALS)
-
-def initialize(context):
-    import datagridff
-
-    content_types, constructors, ftis = process_types(
-        listTypes(PROJECTNAME),
-        PROJECTNAME)
-
-    utils.ContentInit(
-        PROJECTNAME + ' Content',
-        content_types      = content_types,
-        permission         = DEFAULT_ADD_CONTENT_PERMISSION,
-        extra_constructors = constructors,
-        fti                = ftis,
-        ).initialize(context)
