@@ -1,3 +1,0 @@
-If the refresh.txt file is set up in the product directory, the product reading again function of Zope becomes effective. Product reads again in the refresh tab of /Control_Panel/Products/ATCTSmallSample of ZMI. The re-reading is executed and it compiles again and the product can be read again specifying it. 
-
-Contents of the file are displayed in the refresh tab. 
